[package]
name = "integration-test"
version = "0.0.1"
authors = ["Andriy Kovalov <andy.kovv@gmail.com>"]
description = "Procedural macros for create integration tests in right way with set_up() and tear_down() hooks."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.15", features = ["full", "extra-traits"] }
quote = "0.6"
